# -*- coding: utf-8; tab-width: 4; -*-
# ex: set fenc=utf-8 sts=4 ts=4 et nomod:

2016-06-22 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Make the Java CloudI API TransId class publicly accessible and
      add a conversion to a UUID object

2016-06-18 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Update mimetypes

2016-06-15 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add string UUID formatting for the services_update result in
      cloudi_service_api_requests
    * Update cpg README

2016-06-05 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Improve cloudi_service_api:aspect_log_f() type
    * Add define specifically for cloudi_core_i_socket usage

2016-06-04 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add aspects_log_before and aspects_log_after logging configuration
      in cloudi_core
    * Add aspects_log_before and aspects_log_after logging support in
      cloudi_service_monitoring

2016-06-03 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add dispatcher_pid_options and init_pid_options
      service configuration options to services_add and services_update
    * Add usage of the new unix domain socket functionality
      in Erlang/OTP 19.0rc2 for external service usage of the protocol local
      (default == local) to avoid using a NIF
    * Fix external service usage of protocol local
      with count_process > 1
    * Improve Erlang NIF compilation

2016-06-02 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add monkey_latency, monkey_chaos, aspects_init_after,
      aspects_request_before, aspects_request_after,
      aspects_info_before, aspects_info_after, and
      aspects_terminate_before service configuration options to
      service_updates
    * Fix service_updates usage of the service configuration options
      rate_request_max and hibernate
    * Fix service_updates usage of the service configuration options
      info_pid_uses and/or info_pid_options with an internal service that